tests/snapshots/preview__preview_no_pty__preview_no_pty_nul_char.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │00000000  27 61 00 62 27               "
"                                        │00000005                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> ab                                    │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
