tests/snapshots/preview__preview_no_pty__preview_no_pty_plus-4.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │b c                                    "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
">>c                                     │                                       "
" >b                                     │                                       "
"  a                                     │                                       "
"  3/3 [2]                            2/0│                                       "
">                                       │                                       "
cursor: (24, 3)
